Fixed overflow in index.html

--- a/project/part2/styles.css
+++ b/project/part2/styles.css
@@ -1,6 +1,7 @@
 /* Structure */
 body {
   margin: 0;
+  padding: 0;
   background: #F5F5F5;
   z-index: 0;
   max-width: 100%;
@@ -12,6 +13,10 @@ header {
 
 .hide {
   display: none;
+}
+
+.text-button {
+  overflow: auto;
 }
 
 header img {
@@ -32,9 +37,8 @@ img {
 }
 
 #delaware-intro button {
-  position: relative;
-  left: 50px;
-  padding: 7px 10px;
+  margin: 10px;
+  padding: 7px 2px;
   background: #0177B6;
   color: white;
   border-radius: 1px;
@@ -44,7 +48,7 @@ img {
   background: #959595;
 }
 
-#delaware-history {
+#delaware-history, #delaware-intro {
   max-width: 100%;
 }
 
